--- a/AppGateway/AppGateway.csproj
+++ b/AppGateway/AppGateway.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+    <PackageReference Include="Ocelot" Version="17.0.0" />
   </ItemGroup>
 
 </Project>
