--- a/ReportService.Api/appsettings.json
+++ b/ReportService.Api/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQ": {
+    "HostName": "",
+    "Username": "",
+    "Password": "",
+    "ReportQueue": ""
+  }
 }
