Add ocelot configuration. Add docker compose

--- a/ReportService.Api/appsettings.json
+++ b/ReportService.Api/appsettings.json
@@ -7,13 +7,16 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=reportapidb;Port=5433;User ID=admin;Password=admin;Database=ReportDB;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
+  },
   "RabbitMQ": {
-    "HostName": "",
-    "Username": "",
-    "Password": "",
-    "ReportQueue": ""
+    "HostName": "rabbitmq",
+    "Username": "user",
+    "Password": "password",
+    "ReportQueue": "reportQueue"
   },
   "Endpoints": {
-    "ListAllContacts": ""
+    "ListAllContacts": "http://contactapi/contacts"
   }
 }
