--- a/ContactService.Api/appsettings.json
+++ b/ContactService.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=contactapidb;Port=5432;User ID=admin;Password=admin;Database=ReportDB;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
+  }
 }
