Add postgresql driver, add migrations

--- a/ContactService.Api/appsettings.json
+++ b/ContactService.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=contactapidb;Port=5432;User ID=admin;Password=admin;Database=ReportDB;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
+    "DefaultConnection": "Server=contactapidb;Port=5432;User ID=admin;Password=admin;Database=ReportDB;Pooling=true;Integrated Security=true;"
   }
 }
