--- a/ReportService.Api/appsettings.json
+++ b/ReportService.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=reportapidb;Port=5433;User ID=admin;Password=admin;Database=ReportDB;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
+    "DefaultConnection": "Server=reportapidb;Port=5433;User ID=admin;Password=admin;Database=ReportDB;Pooling=true;Integrated Security=true;"
   },
   "RabbitMQ": {
     "HostName": "rabbitmq",
