--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.6"
 services:
     rabbitmq:       
         image: rabbitmq:3-management
-        container_name: rabbitmq
+        container_name: contactrabbitmq
         restart: always
         ports:
             - 5672:5672
@@ -13,7 +13,7 @@ services:
     
     contactapidb: 
         image: postgres
-        container_name: postgredb
+        container_name: contactapidb
         restart: always
         ports: 
             - "5432:5432"
@@ -24,7 +24,7 @@ services:
         
     reportapidb: 
         image: postgres
-        container_name: postgredb
+        container_name: reportapidb
         restart: always
         ports: 
             - "5433:5432"
@@ -35,16 +35,16 @@ services:
         
     appgateway:    
         image: appgateway  
-        container_name: appgateway
+        container_name: contactappgateway
         ports:
             - 5000:80
             - 5001:443
-        environment:
-            - "ASPNETCORE_URLS=https://+;http://+"
-            - Kestrel__Certificates__Default__Path=/app/Infrastructure/Certificate/cert-aspnetcore.pfx
-            - Kestrel__Certificates__Default__Password=SecretPassword    
+        #environment:
+        #    - "ASPNETCORE_URLS=https://+;http://+"
+        #    - Kestrel__Certificates__Default__Path=/app/Infrastructure/Certificate/cert-aspnetcore.pfx
+        #    - Kestrel__Certificates__Default__Password=SecretPassword    
         build: 
-            context: ./AppGateway
+            context: .
             dockerfile: AppGateway/Dockerfile 
         restart: always
                 
@@ -54,12 +54,12 @@ services:
         ports:
             - 5002:80
             - 5003:443
-        environment:
-            - "ASPNETCORE_URLS=https://+;http://+"
-            - Kestrel__Certificates__Default__Path=/app/Infrastructure/Certificate/cert-aspnetcore.pfx
-            - Kestrel__Certificates__Default__Password=SecretPassword        
+        #environment:
+        #    - "ASPNETCORE_URLS=https://+;http://+"
+        #    - Kestrel__Certificates__Default__Path=/app/Infrastructure/Certificate/cert-aspnetcore.pfx
+        #    - Kestrel__Certificates__Default__Password=SecretPassword        
         build: 
-            context: ./ContactService.Api
+            context: .
             dockerfile: ContactService.Api/Dockerfile 
         restart: always       
         depends_on:
@@ -71,12 +71,12 @@ services:
         ports:
             - 5004:80
             - 5005:443
-        environment:
-            - "ASPNETCORE_URLS=https://+;http://+"
-            - Kestrel__Certificates__Default__Path=/app/Infrastructure/Certificate/cert-aspnetcore.pfx
-            - Kestrel__Certificates__Default__Password=SecretPassword      
+        #environment:
+        #    - "ASPNETCORE_URLS=https://+;http://+"
+        #    - Kestrel__Certificates__Default__Path=/app/Infrastructure/Certificate/cert-aspnetcore.pfx
+        #    - Kestrel__Certificates__Default__Password=SecretPassword      
         build: 
-            context: ./ReportService.Api
+            context: .
             dockerfile: ReportService.Api/Dockerfile  
         restart: always
         depends_on:
