edit docker configuration

--- a/ContactService.Api/appsettings.json
+++ b/ContactService.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=contactapidb;Port=5432;User ID=admin;Password=admin;Database=ReportDB;Pooling=true;Integrated Security=true;"
+    "DefaultConnection": "Host=contactdb;Port=5432;Username=admin;Password=admin;Database=ContactDB;"
   }
 }
