--- a/ReportService.Api/appsettings.json
+++ b/ReportService.Api/appsettings.json
@@ -8,15 +8,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=reportapidb;Port=5433;User ID=admin;Password=admin;Database=ReportDB;Pooling=true;Integrated Security=true;"
+    "DefaultConnection": "Host=reportdb;Port=5432;Username=admin;Password=admin;Database=ReportDB;"
   },
   "RabbitMQ": {
-    "HostName": "rabbitmq",
+    "HostName": "contactrabbitmq",
     "Username": "user",
     "Password": "password",
     "ReportQueue": "reportQueue"
   },
   "Endpoints": {
-    "ListAllContacts": "http://contactapi/contacts"
+    "ListAllContacts": "https://contactapi/contacts"
   }
 }
