--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.6"
 services:
-    rabbitmq:       
+    contactrabbitmq:       
         image: rabbitmq:3-management
         container_name: contactrabbitmq
         restart: always
@@ -16,7 +16,7 @@ services:
         container_name: contactapidb
         restart: always
         ports: 
-            - "5432:5432"
+            - 5432:5432
         environment: 
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=admin
@@ -27,13 +27,13 @@ services:
         container_name: reportapidb
         restart: always
         ports: 
-            - "5433:5432"
+            - 5433:5432
         environment: 
             - POSTGRES_USER=admin
             - POSTGRES_PASSWORD=admin
             - POSTGRES_DB=ReportDB
         
-    appgateway:    
+    contactappgateway:    
         image: appgateway  
         container_name: contactappgateway
         ports:
@@ -46,7 +46,10 @@ services:
         build: 
             context: .
             dockerfile: AppGateway/Dockerfile 
-        restart: always
+        restart: always    
+        depends_on:
+            - contactapi
+            - reportapi
                 
     contactapi:
         image: contactapi  
@@ -54,7 +57,8 @@ services:
         ports:
             - 5002:80
             - 5003:443
-        #environment:
+        environment:
+            - DefaultConnection=Server=contactapidb;Port=5432;User Id=admin;Password=admin;Database=ContactDB;SSL Mode=Disable;
         #    - "ASPNETCORE_URLS=https://+;http://+"
         #    - Kestrel__Certificates__Default__Path=/app/Infrastructure/Certificate/cert-aspnetcore.pfx
         #    - Kestrel__Certificates__Default__Password=SecretPassword        
@@ -71,7 +75,8 @@ services:
         ports:
             - 5004:80
             - 5005:443
-        #environment:
+        environment:
+            - DefaultConnection=Server=reportapidb;Port=5432;User Id=admin;Password=admin;Database=ReportDB;SSL Mode=Disable;
         #    - "ASPNETCORE_URLS=https://+;http://+"
         #    - Kestrel__Certificates__Default__Path=/app/Infrastructure/Certificate/cert-aspnetcore.pfx
         #    - Kestrel__Certificates__Default__Password=SecretPassword      
@@ -80,5 +85,14 @@ services:
             dockerfile: ReportService.Api/Dockerfile  
         restart: always
         depends_on:
-            - rabbitmq 
+            - contactrabbitmq 
             - reportapidb 
+
+    pgadmin:
+        image: dpage/pgadmin4
+        environment:
+          - PGADMIN_DEFAULT_EMAIL=pgadmin@admin.org
+          - PGADMIN_DEFAULT_PASSWORD=password
+        ports:
+          - "5050:80"
+        restart: always
