--- a/ReportService.Api/appsettings.json
+++ b/ReportService.Api/appsettings.json
@@ -17,6 +17,6 @@
     "ReportQueue": "reportQueue"
   },
   "Endpoints": {
-    "ListAllContacts": "https://contactapi/contacts"
+    "ListAllContacts": "http://contactappgateway/contacts"
   }
 }
