--- a/ReportService.Api/appsettings.Development.json
+++ b/ReportService.Api/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Username": "user",
+    "Password": "password",
+    "ReportQueue": "reportQueue"
+  },
+  "Endpoints": {
+    "ListAllContacts": "http://localhost:5000/contacts"
   }
 }
