--- a/ContactService.Api/Properties/launchSettings.json
+++ b/ContactService.Api/Properties/launchSettings.json
@@ -22,6 +22,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
+        "DefaultConnection": "Server=localhost;Port=5432;User Id=admin;Password=admin;Database=ReportDB;SSL Mode=Disable;",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
