--- a/ReportService.Test/ReportService.Test.csproj
+++ b/ReportService.Test/ReportService.Test.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ReportService.Api\ReportService.Api.csproj" />
+  </ItemGroup>
+
 </Project>
