--- a/ReportService.Api/appsettings.json
+++ b/ReportService.Api/appsettings.json
@@ -6,14 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "RabbitMQ": {
-    "HostName": "contactrabbitmq",
-    "Username": "user",
-    "Password": "password",
-    "ReportQueue": "reportQueue"
-  },
-  "Endpoints": {
-    "ListAllContacts": "http://contactappgateway/contacts"
-  }
+  "AllowedHosts": "*"
 }
